又修了一些bug

--- a/Source/RenderPasses/IrradiancePass/CMakeLists.txt
+++ b/Source/RenderPasses/IrradiancePass/CMakeLists.txt
@@ -6,4 +6,6 @@ target_sources(IrradiancePass PRIVATE
     IrradiancePass.cs.slang
 )
 
+target_copy_shaders(IrradiancePass RenderPasses/IrradiancePass)
+
 target_source_group(IrradiancePass "RenderPasses")
