--- a/Source/RenderPasses/CMakeLists.txt
+++ b/Source/RenderPasses/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory(ErrorMeasurePass)
 add_subdirectory(FLIPPass)
 add_subdirectory(GBuffer)
 add_subdirectory(ImageLoader)
+add_subdirectory(IncomingLightPowerPass)
 add_subdirectory(IrradiancePass)
 add_subdirectory(MinimalPathTracer)
 add_subdirectory(ModulateIllumination)
