前三个子任务完成了

--- a/Source/Falcor/CMakeLists.txt
+++ b/Source/Falcor/CMakeLists.txt
@@ -399,6 +399,8 @@ target_sources(Falcor PRIVATE
     Scene/Lights/ILightCollection.h
     Scene/Lights/LEDLight.cpp
     Scene/Lights/LEDLight.h
+    Scene/Lights/LED_Emissive.cpp
+    Scene/Lights/LED_Emissive.h
     Scene/Lights/Light.cpp
     Scene/Lights/Light.h
     Scene/Lights/LightCollection.cpp
