解决了一个同步问题

--- a/Source/Falcor/CMakeLists.txt
+++ b/Source/Falcor/CMakeLists.txt
@@ -412,6 +412,7 @@ target_sources(Falcor PRIVATE
     Scene/Lights/LightProfile.h
     Scene/Lights/LightProfile.slang
     Scene/Lights/MeshLightData.slang
+    Scene/Lights/SpectrumSampling.slang
     Scene/Lights/UpdateTriangleVertices.cs.slang
 
     Scene/Material/AlphaTest.slang
